fix alignment

--- a/appcompose/home/home.css
+++ b/appcompose/home/home.css
@@ -79,7 +79,7 @@
 }
 
 #main {
-    margin: 10px;
+    margin: 0px;
     max-width: 250px;
     /*width: 100%;*/
     overflow: hidden;
